✨ add endpoint to create a new todo
