# src/domain/entities/content.go
@@ -1,8 +1,0 @@
-package entities
-
-type Content struct {
-	Id          string `json:"id"`
-	Title       string `json:"title"`
-	Description string `json:"description"`
-	Thumbnail   string `json:"thumbnail"`
-}
