# src/ports/mongo-go-driver/models/content.go
@@ -1,8 +1,0 @@
-package mongoGoDriver
-
-type Content struct {
-	Id          string `bson:"_id,omitempty"`
-	Title       string `bson:"title,omitempty"`
-	Description string `bson:"description,omitempty"`
-	Thumbnail   string `bson:"thumbnail,omitempty"`
-}
